sandbox/output
StringCalculator.java:5: error: cannot find symbol
        List<String> numbers = StringToIntParser.parse(string);
                                                ^
  symbol:   method parse(String)
  location: class StringToIntParser
1 error
